--- a/options/options.css
+++ b/options/options.css
@@ -19,3 +19,18 @@
   width: 45px;
   height: 45px;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Poppins";
+}
+
+p{
+  font-family: "Poppins";
+  font-size: 30px;
+  opacity: 75%;
+}
